# ruby-shades

./: .gitignore
ruby-shades-backend/: .gitignore  Cargo.toml  Config.toml
ruby-shades-backend/metadata/: db  snap.00000000000D0E71  snap.00000000001EEDB0
ruby-shades-backend/src/: axum_service.rs  config.rs  database.rs  directory_parser.rs  main.rs  metadata_manager.rs
ruby-shades-frontend/: Cargo.toml  Trunk.toml  index.html
ruby-shades-frontend/src/: backend_handler.rs  config.rs  main.rs
ruby-shades-frontend/src/components/: glass_box.rs  loading_indicator.rs  mod.rs
ruby-shades-frontend/src/pages/: home.rs  mod.rs  show.rs
