[package]
name = "ruby-shades-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
