[package]
name = "ruby-shades-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
gloo = "0.11.0"
gloo-net = "0.6.0"
once_cell = "1.21.3"
reqwasm = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.9.2"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
